Add stage tabs to league leaderboards and global Group Stage/Knockout leagues (#115)
